fixed spacing

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;0,700;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;600&display=swap');
+
+/* variables */
+:root {
+  --background: pink;
+  --foreground: #000;
+  --myfont: Raleway;
+  --desktopwidth: 1192px;
+}
+
+
+
+
 
 
 html,
@@ -7,9 +19,17 @@ body {
 }
 
 body {
-  font-family: Raleway;
+  font-family: var(--myfont);
   display: grid;
-  grid-template-rows: auto 1fr auto;
+  grid-template-rows: 5vh 1fr 5vh;
+  background-color:var(--background);
+  color:var(--foreground);
+}
+
+* {
+  box-sizing:border-box;
+  margin:0;
+  padding:0;
 }
 
 .hamburger {
@@ -28,7 +48,7 @@ display: flex;
 flex-direction: column;
 justify-content: center;
 align-items: center;
-  background-color:pink;
+background-color:var(--foreground);
 }
 
 .homepage main#main_site {
@@ -64,9 +84,9 @@ padding: 0;
   list-style-type: none;
 }
 
-#nav_site ul li a {
+.menu li a {
   text-decoration: none;
-
+  color:var(--background);
   padding: 12px;
   display: block;
 }
@@ -74,22 +94,28 @@ padding: 0;
 h1 {
   font-size: 22px;
 }
+.slider main {
+  overflow-y:hidden;
+}
 
+.carousel {
+
+}
 .carousel-cell {
   width: 100%;
-  height: 92vh;
-  background:pink;
+  height: 90vh;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
-.carousel.is-fullscreen .carousel-cell {
-  height: 100%;
-}
 
 .carousel-cell img {
   display: block;
+  width:auto;
+  height:auto;
+  max-width:100%;
   max-height: 100%;
 }
 
@@ -118,7 +144,7 @@ h1 {
 
 a#logo_home {
   display: block;
-
+padding:6px;
   height:100%;
 }
 
@@ -129,7 +155,6 @@ a#logo_home {
 
   height:100%;
   width:auto;
-  padding:6px;
 }
 main#main_site {
   text-align: center;
@@ -137,7 +162,9 @@ main#main_site {
 
 /* desktop styles */
 @media screen and (orientation: landscape) {
-
+ header#header_site {
+   flex-direction: row;
+ }
 
   h1 {
     font-size: 42px;
@@ -171,7 +198,7 @@ main#main_site {
 
 }
 footer#footer_site {
-  height:4vh;
+
   display: flex;
   justify-content: space-between;
 }
@@ -194,15 +221,13 @@ img.social-icon {
   display: block;
 }
 
+
 header#header_site h1 {
-  font-family: Raleway;
 font-style: normal;
 font-weight: bold;
 font-size: 36px;
 text-transform: uppercase;
 text-align:center;
-color: #DFC5AB;
-border-bottom: 1px solid #DFC5AB;
 margin-top:12px;
 }
 
@@ -211,10 +236,33 @@ header#header_site h2 {
 font-weight: 500;
 font-size: 18px;
 line-height: 21px;
-
-color: #DFC5AB;
 margin-top:8px;
 
 }
 
+.carousel-cell {
+font-size: 24px;
+color: rgba(0, 0, 0, 0.5);
+}
 
+.slideinfo {
+  display:flex;
+  justify-content:space-around;
+  max-width:var(--desktopwidth);
+  margin:1rem;
+}
+
+.slidedescription {
+  color:var(--foreground);
+  max-width:var(--desktopwidth);
+  background: linear-gradient(to bottom, #5B37A8, #0255B6);
+  padding: 3px;
+  border-radius:7px;
+}
+
+.descriptioninner {
+  background-color:var(--background);
+  font-size:18px;
+  padding:1rem;
+  border-radius:5px;
+}
